--- a/amelioration-continue-services.adoc
+++ b/amelioration-continue-services.adoc
@@ -1,4 +1,7 @@
 = Amélioration continue des services / CSI
+:revealjs_theme: beige
+:source-highlighter: highlight.js
+:icons: font
 
 == Introduction
 
