--- a/itsm.adoc
+++ b/itsm.adoc
@@ -106,11 +106,19 @@ Assurer une gestion complète et précise des actifs IT et de leurs relations da
 
 === Gestion des niveaux de service (SLA) : 
 
-Définir, surveiller et gérer les accords sur les niveaux de service pour garantir que les services répondent aux attentes des utilisateurs et des parties prenantes.
+Définir, surveiller et gérer les accords sur les niveaux de service pour garantir ...
+
+=== ...
+
+que les services répondent aux attentes des utilisateurs et des parties prenantes.
 
 === Catalogue de services : 
 
-Maintenir un catalogue de services qui décrit tous les services IT disponibles pour les utilisateurs, leurs niveaux de service associés, et leurs coûts éventuels.
+Maintenir un catalogue de services qui décrit tous les services IT disponibles pour les utilisateurs, ...
+
+=== ...
+
+leurs niveaux de service associés, et leurs coûts éventuels.
 
 === Gestion des demandes de service : 
 
@@ -144,11 +152,19 @@ L’ITSM permet d'optimiser l'utilisation des ressources IT, réduisant ainsi le
 
 === Gestion des risques : 
 
-En intégrant des processus de gestion des changements et des incidents, l'ITSM aide à gérer les risques liés aux opérations IT et à minimiser les interruptions de service.
+En intégrant des processus de gestion des changements et des incidents, l'ITSM aide ...
+
+=== ...
+
+à gérer les risques liés aux opérations IT et à minimiser les interruptions de service.
 
 === Amélioration de la satisfaction des utilisateurs : 
 
-Avec une meilleure gestion des incidents et une communication claire sur les niveaux de service (SLA), l’ITSM contribue à améliorer l'expérience des utilisateurs finaux.
+Avec une meilleure gestion des incidents et une communication claire sur les niveaux de service (SLA), ...
+
+=== ...
+
+l’ITSM contribue à améliorer l'expérience des utilisateurs finaux.
 
 
 
